// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ios - iPhone X  BpkNavigationBar should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(243, 242, 245)",
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "shadowColor": "rgb(230, 228, 235)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 0,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 64,
          "justifyContent": "space-between",
          "overflow": "visible",
          "paddingTop": 44,
        },
        Object {
          "height": 88,
          "paddingTop": 44,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Back"
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": 1,
          "zIndex": 2,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../packages/react-native-bpk-component-navigation-bar/src/chevron-left.png",
          }
        }
        style={
          Array [
            Object {
              "marginEnd": 8,
            },
            Object {
              "tintColor": "rgb(82, 76, 97)",
            },
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
              "letterSpacing": -0.4,
            },
            Object {},
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
              },
            ],
          ]
        }
      >
        Back
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "height": 44,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "maxWidth": "60%",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 20,
                "fontWeight": "400",
                "letterSpacing": -0.4,
              },
              Object {
                "fontWeight": "500",
              },
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                },
                null,
              ],
            ]
          }
        >
          Backpack
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ios - iPhone X  BpkNavigationBar should render correctly with trailing button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(243, 242, 245)",
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "shadowColor": "rgb(230, 228, 235)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 0,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 64,
          "justifyContent": "space-between",
          "overflow": "visible",
          "paddingTop": 44,
        },
        Object {
          "height": 88,
          "paddingTop": 44,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Cancel"
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginStart": 8,
          "opacity": 1,
          "zIndex": 2,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
              "letterSpacing": -0.4,
            },
            Object {},
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
              },
            ],
          ]
        }
      >
        Cancel
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "height": 44,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "maxWidth": "60%",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 20,
                "fontWeight": "400",
                "letterSpacing": -0.4,
              },
              Object {
                "fontWeight": "500",
              },
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                },
                null,
              ],
            ]
          }
        >
          Backpack
        </Text>
      </View>
    </View>
    <View
      accessibilityLabel="Done"
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginEnd": 8,
          "opacity": 1,
          "zIndex": 2,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
              "letterSpacing": -0.4,
            },
            Object {
              "fontWeight": "500",
            },
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
              },
            ],
          ]
        }
      >
        Done
      </Text>
    </View>
  </View>
</View>
`;
